2004-05-07  Helmut Eller  <e9626484@stud3.tuwien.ac.at>

	* swank-clisp.lisp (compiler-note-location): Use make-location to
	instead of `(:location ...). This initializes the new hint slot
	automatically.

2004-05-07  Barry Fishman <barry_fishman@att.net>

	* swank.lisp (prin1-to-string-for-emacs, arglist-to-string): CVS
	CLISP prints NIL as |COMMON-LISP|::|NIL| if *print-readably* is
	true.  Set *print-readably* to nil for a more Emacs friendly
	printer syntax.

2004-05-06   Helmut Eller  <e9626484@stud3.tuwien.ac.at>

	* slime.el (slime-maybe-list-compiler-notes): Display the notes
	listing after C-c C-c only if there are no annotations in the
	buffer.  CMUCL creates usually one warning with an error location
	and an almost redundant warning without at the end of the
	compilation unit.  Don't display the listing in this common case.

	(slime-reindent-defun): Pass nil as the third arument to
	indent-region.

2004-05-06  Marco Baringer <mb@bese.it>

	* slime.el (slime-repl-sayoonara): Don't attempt to quit the lisp
	if we're not connected.

	* swank-openmcl.lisp (*buffer-offset*, *buffer-name*): Supply
	default values. This avoids unbound value errors when compiling an
	asdf system signals errors.
	
2004-05-04  Alan Shutko  <ats@acm.org>

	* slime.el (slime-compiler-notes-show-details/mouse): New command.
	(slime-compiler-notes-mode-map): Use it.

2004-05-04   Helmut Eller  <e9626484@stud3.tuwien.ac.at>

	* swank-cmucl.lisp (arglist): Handle byte-code functions better.
	We don't know much about the actual argument list, only the number
	of arguments.  Return at least something mildly interesting like
	 (arg0 arg1 &optional arg2 ...)
	(function-location): Special-case byte-code functions.

	* swank-backend.lisp (with-struct): New macro.

2004-05-04 Thomas F. Burdick  <tfb@OCF.Berkeley.EDU>

	* slime.el (slime-reindent-defun): New command on C-M-q. Reindent
	the current Lisp defun after trying to close any unmatched